use images from API instead of locally stored ones from aoedb

--- a/src/style/aoeo.css
+++ b/src/style/aoeo.css
@@ -1,6 +1,6 @@
 body {
  font-family: Helvetica,Arial, Sans-Serif;
- background-image: url('/images/Art/UserInterface/LoadingScreens/ShipEgyptTravel_df.jpg');
+ background-image: url('https://images.projectceleste.com/Art/UserInterface/LoadingScreens/ShipEgyptTravel_df.png');
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: #E6C953;
